--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,3 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true
-  },
-  "extends": [
-    "next/babel",
-    "next/core-web-vitals",
-    "eslint:recommended",
-    "prettier",
-    "plugin:react/recommended"
-  ],
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
-  "plugins": ["react"],
-  "rules": {}
+  "parser": "babel-eslint"
 }
