--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "axios": "^0.26.1",
+    "babel-eslint": "^10.1.0",
     "framer-motion": "^6.2.8",
     "millify": "^4.0.0",
     "next": "12.1.4",
