--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
-  "name": "estate",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@chakra-ui/react": "^1.8.7",
-    "@emotion/react": "^11.8.2",
-    "@emotion/styled": "^11.8.1",
-    "axios": "^0.26.1",
-    "babel-eslint": "^10.1.0",
-    "framer-motion": "^6.2.8",
-    "millify": "^4.0.0",
-    "next": "12.1.4",
-    "nprogress": "^0.2.0",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-horizontal-scrolling-menu": "^2.7.1",
-    "react-icons": "^4.3.1"
-  },
-  "devDependencies": {
-    "eslint": "^8.12.0",
-    "eslint-config-next": "12.1.4",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-react": "^7.29.4",
-    "prettier": "2.6.2"
-  }
+	"name": "estate",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@chakra-ui/react": "^1.8.7",
+		"@emotion/react": "^11.8.2",
+		"@emotion/styled": "^11.8.1",
+		"axios": "^0.26.1",
+		"@babel/eslint-parser": "^7.5.4",
+		"framer-motion": "^6.2.8",
+		"millify": "^4.0.0",
+		"next": "12.1.4",
+		"nprogress": "^0.2.0",
+		"react": "18.0.0",
+		"react-dom": "18.0.0",
+		"react-horizontal-scrolling-menu": "^2.7.1",
+		"react-icons": "^4.3.1"
+	},
+	"devDependencies": {
+		"eslint": "^8.12.0",
+		"eslint-config-next": "12.1.4",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-react": "^7.29.4",
+		"prettier": "2.6.2"
+	}
 }
