--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@babel/eslint-parser": "^7.5.4",
 		"@chakra-ui/react": "^1.8.7",
 		"@emotion/react": "^11.8.2",
 		"@emotion/styled": "^11.8.1",
 		"axios": "^0.26.1",
-		"@babel/eslint-parser": "^7.5.4",
 		"framer-motion": "^6.2.8",
 		"millify": "^4.0.0",
 		"next": "12.1.4",
@@ -24,6 +24,7 @@
 		"react-icons": "^4.3.1"
 	},
 	"devDependencies": {
+		"@next/eslint-plugin-next": "^12.1.4",
 		"eslint": "^8.12.0",
 		"eslint-config-next": "12.1.4",
 		"eslint-config-prettier": "^8.5.0",
